# Drehblubbe

./: .gitmodules  CMakeLists.txt  Motor.cc  Motor.h  mainwindow.cc  mainwindow.h  mainwindow.ui
src/: Motor.cc  Motor.h
